# args

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  test.yml
cmake/: ArgsConfig.cmake.in  CPackConfig.cmake  FetchGoogleTest.cmake
include/: args.hpp
src/: args.cpp
tests/: CMakeLists.txt
tests/include/: args_test.hpp
tests/src/: args_test.cpp
